--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.0",
+    "gulp-concat-filenames": "^1.1.1",
     "gulp-express": "^0.3.5",
     "gulp-if": "^2.0.1",
     "gulp-pug": "^3.0.4",
