--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
     "gulp-uglifycss": "^1.0.6",
+    "gulp-zip": "^3.2.0",
     "merge-stream": "^1.0.0",
     "node-font-awesome": "^1.0.2",
     "sass-inline-image": "0.0.3",
