--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "compass-importer": "^0.4.1",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
-    "gulp-browserify": "^0.5.1",
+    "gulp-bro": "^0.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-concat-filenames": "^1.1.1",
     "gulp-express": "^0.3.5",
@@ -20,12 +20,12 @@
     "gulp-pug": "^3.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
-    "gulp-uglify": "^2.0.0",
     "gulp-uglifycss": "^1.0.6",
     "gulp-zip": "^3.2.0",
     "merge-stream": "^1.0.0",
     "node-font-awesome": "^1.0.2",
     "sass-inline-image": "0.0.3",
+    "uglifyify": "^3.0.4",
     "yargs": "^5.0.0"
   },
   "dependencies": {
