--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babelify": "^7.3.0",
     "compass-importer": "^0.4.1",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
