--- a/package.json
+++ b/package.json
@@ -32,9 +32,14 @@
     "yargs": "^5.0.0"
   },
   "dependencies": {
-    "angular": "^1.5.8",
-    "angular-cookies": "^1.5.8",
-    "codemirror": "^5.18.2",
-    "font-awesome": "^4.6.3"
+    "angular": "^1.6.1",
+    "angular-cookies": "^1.6.1",
+    "codemirror": "^5.22.0",
+    "font-awesome": "^4.7.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-concat-filenames": "^1.2.0",
+    "gulp-if": "^2.0.2",
+    "gulp-pug": "^3.2.0",
+    "merge-stream": "^1.0.1"
   }
 }
