--- a/package.json
+++ b/package.json
@@ -12,23 +12,26 @@
     "babel-core": "^6.21.0",
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
+    "browser-sync": "^2.23.3",
     "compass-importer": "^0.4.1",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
-    "gulp-bro": "^0.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-concat-filenames": "^1.1.1",
     "gulp-express": "^0.3.5",
     "gulp-if": "^2.0.1",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-pug": "^3.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^2.0.0",
     "gulp-uglifycss": "^1.0.6",
     "gulp-zip": "^3.2.0",
     "merge-stream": "^1.0.0",
     "node-font-awesome": "^1.0.2",
     "sass-inline-image": "0.0.3",
-    "uglifyify": "^3.0.4",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
     "yargs": "^5.0.0"
   },
   "dependencies": {
@@ -40,6 +43,7 @@
     "gulp-concat-filenames": "^1.2.0",
     "gulp-if": "^2.0.2",
     "gulp-pug": "^3.2.0",
-    "merge-stream": "^1.0.1"
+    "merge-stream": "^1.0.1",
+    "node-sass": "^4.9.0"
   }
 }
