--- a/package.json
+++ b/package.json
@@ -1,49 +1,46 @@
 {
-  "name": "vnmsimulator",
-  "description": "Von Neumann Machine Simulator",
-  "main": "index.html",
-  "author": "Lorenzo Ganni",
-  "repository": "lorenzoganni/vnmsim",
-  "bugs": {
-    "url": "https://github.com/lorenzoganni/vnmsim/issues"
+  "name": "vnmsim",
+  "version": "1.0.0",
+  "description": "A simulator of the Von Neumann machine written in Javascript. It is built mainly using Pug (previously Jade), Sass, AngularJS and CodeMirror.",
+  "main": "index.js",
+  "scripts": {
+    "build": "webpack",
+    "dev": "webpack serve",
+    "start": "npm run build && electron dist/main.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/c2r0b/vnmsim.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/c2r0b/vnmsim/issues"
+  },
+  "homepage": "https://github.com/c2r0b/vnmsim#readme",
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babelify": "^7.3.0",
-    "browser-sync": "^2.23.3",
-    "compass-importer": "^0.4.1",
-    "express": "^4.14.0",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-concat-filenames": "^1.1.1",
-    "gulp-express": "^0.3.5",
-    "gulp-if": "^2.0.1",
-    "gulp-ng-annotate": "^2.0.0",
-    "gulp-pug": "^3.0.4",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-uglify": "^2.0.0",
-    "gulp-uglifycss": "^1.0.6",
-    "gulp-zip": "^3.2.0",
-    "merge-stream": "^1.0.0",
-    "node-font-awesome": "^1.0.2",
-    "sass-inline-image": "0.0.3",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "yargs": "^5.0.0"
+    "@types/react": "^17.0.0",
+    "@types/react-codemirror": "^1.0.3",
+    "@types/react-dom": "^17.0.0",
+    "css-loader": "^5.0.1",
+    "electron": "^11.0.3",
+    "html-webpack-plugin": "^4.5.0",
+    "path": "^0.12.7",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
+    "ts-loader": "^8.0.11",
+    "typescript": "^4.1.2",
+    "webpack": "^5.13.0",
+    "webpack-cli": "^4.3.1"
   },
   "dependencies": {
-    "angular": "^1.6.1",
-    "angular-cookies": "^1.6.1",
-    "codemirror": "^5.22.0",
-    "font-awesome": "^4.7.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-concat-filenames": "^1.2.0",
-    "gulp-if": "^2.0.2",
-    "gulp-pug": "^3.2.0",
-    "merge-stream": "^1.0.1",
-    "node-sass": "^4.9.0"
+    "@fluentui/react": "^7.153.4",
+    "codemirror": "^5.58.3",
+    "react-codemirror": "^1.0.0"
   }
 }
