--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "name": "vnmsim",
-  "version": "1.0.0",
-  "description": "A simulator of the Von Neumann machine written in Javascript. It is built mainly using Pug (previously Jade), Sass, AngularJS and CodeMirror.",
+  "version": "2.0.0",
+  "description": "A simulator of the Von Neumann machine",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack serve",
-    "start": "npm run build && electron dist/main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "mkdir -p app && cp ./src/index.template.html ./app/index.html && node ./build.js"
   },
   "repository": {
     "type": "git",
@@ -20,27 +17,24 @@
     "url": "https://github.com/c2r0b/vnmsim/issues"
   },
   "homepage": "https://github.com/c2r0b/vnmsim#readme",
-  "devDependencies": {
+  "dependencies": {
+    "@deanc/esbuild-plugin-postcss": "^1.0.1",
+    "@fluentui/react": "^8.9.4",
+    "@types/node": "^14.14.37",
     "@types/react": "^17.0.0",
     "@types/react-codemirror": "^1.0.3",
     "@types/react-dom": "^17.0.0",
-    "css-loader": "^5.0.1",
-    "electron": "^11.0.3",
-    "html-webpack-plugin": "^4.5.0",
-    "path": "^0.12.7",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "sass": "^1.29.0",
-    "sass-loader": "^10.1.0",
-    "style-loader": "^2.0.0",
-    "ts-loader": "^8.0.11",
-    "typescript": "^4.1.2",
-    "webpack": "^5.13.0",
-    "webpack-cli": "^4.3.1"
-  },
-  "dependencies": {
-    "@fluentui/react": "^7.153.4",
+    "autoprefixer": "^10.2.5",
     "codemirror": "^5.58.3",
-    "react-codemirror": "^1.0.0"
+    "esbuild": "^0.11.7",
+    "esbuild-plugin-postcss2": "^0.0.9",
+    "mobx": "^6.2.0",
+    "mobx-react-lite": "^3.2.0",
+    "postcss-nested": "^5.0.5",
+    "react": "^17.0.1",
+    "react-codemirror": "^1.0.0",
+    "react-dom": "^17.0.1",
+    "ts-loader": "^8.0.11",
+    "typescript": "^4.1.2"
   }
 }
