--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/react-dom": "^17.0.0",
     "autoprefixer": "^10.2.5",
     "codemirror": "^5.58.3",
-    "esbuild": "^0.11.7",
+    "esbuild": "0.10",
     "esbuild-plugin-postcss2": "^0.0.9",
     "mobx": "^6.2.0",
     "mobx-react-lite": "^3.2.0",
