--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   "dependencies": {
     "@deanc/esbuild-plugin-postcss": "^1.0.1",
     "@fluentui/react": "^8.9.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.0",
     "@types/react-codemirror": "^1.0.3",
@@ -33,6 +37,7 @@
     "postcss-nested": "^5.0.5",
     "react": "^17.0.1",
     "react-codemirror": "^1.0.0",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.1",
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2"
