--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "mobx-react-lite": "^3.2.0",
     "postcss-nested": "^5.0.5",
     "react": "^17.0.1",
-    "react-codemirror": "^1.0.0",
+    "react-codemirror2": "^7.2.1",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.1",
     "ts-loader": "^8.0.11",
