--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-codemirror2": "^7.2.1",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.1",
+    "react-split-pane": "^0.1.92",
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2"
   }
