--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "postcss-nested": "^5.0.5",
     "react": "^17.0.1",
     "react-codemirror2": "^7.2.1",
-    "react-dark-mode-toggle": "^0.2.0",
+    "react-contenteditable": "^3.3.6",
     "react-dom": "^17.0.1",
-    "react-split-pane": "^0.1.92",
+    "react-easy-panzoom": "^0.4.4",
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2"
   }
