--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,9 @@
       "es2017",
       "dom"
     ],
+    "paths": {
+      "src": ["/src/"]
+    },
     "removeComments": true,
     "allowSyntheticDefaultImports": true,
     "useDefineForClassFields": true,
