--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simulator of the Von Neumann machine",
   "main": "index.js",
   "scripts": {
-    "build": "mkdir -p app && cp ./src/index.template.html ./app/index.html && node ./build.js"
+    "build": "mkdir -p app && cp ./src/index.template.html ./app/index.html && node ./build.js",
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -18,25 +19,33 @@
   },
   "homepage": "https://github.com/c2r0b/vnmsim#readme",
   "dependencies": {
-    "@deanc/esbuild-plugin-postcss": "^1.0.1",
     "@fluentui/react": "^8.9.4",
     "@fluentui/react-icons-mdl2": "^1.0.3",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.0",
-    "@types/react-codemirror": "^1.0.3",
-    "@types/react-dom": "^17.0.0",
-    "autoprefixer": "^10.2.5",
     "codemirror": "^5.58.3",
-    "esbuild": "0.10",
-    "esbuild-plugin-postcss2": "^0.0.9",
     "mobx": "^6.2.0",
     "mobx-react-lite": "^3.2.0",
-    "postcss-nested": "^5.0.5",
+    "re-resizable": "^6.9.1",
     "react": "^17.0.1",
     "react-codemirror2": "^7.2.1",
     "react-contenteditable": "^3.3.6",
     "react-dom": "^17.0.1",
     "react-easy-panzoom": "^0.4.4",
+    "react-split": "^2.0.14",
+    "react-virtualized-auto-sizer": "^1.0.6"
+  },
+  "devDependencies": {
+    "@deanc/esbuild-plugin-postcss": "^1.0.1",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.0",
+    "@types/react-codemirror": "^1.0.3",
+    "@types/react-dom": "^17.0.0",
+    "autoprefixer": "^10.2.5",
+    "esbuild": "0.10",
+    "esbuild-plugin-postcss2": "^0.0.9",
+    "jest": "^27.5.1",
+    "postcss-nested": "^5.0.5",
+    "ts-jest": "^27.1.3",
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2"
   }
