--- a/package.json
+++ b/package.json
@@ -22,30 +22,33 @@
   },
   "homepage": "https://github.com/c2r0b/vnmsim#readme",
   "dependencies": {
-    "@fluentui/react": "^8.9.4",
-    "@fluentui/react-icons-mdl2": "^1.0.3",
-    "codemirror": "^5.58.3",
-    "mobx": "^6.2.0",
-    "mobx-react-lite": "^3.2.0",
-    "re-resizable": "^6.9.1",
-    "react": "^17.0.1",
+    "@fluentui/react": "^8.68.0",
+    "@fluentui/react-icons-mdl2": "^1.3.9",
+    "codemirror": "^5.65.3",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.4.0",
+    "next": "^12.1.6",
+    "re-resizable": "^6.9.9",
+    "react": "^18.1.0",
     "react-codemirror2": "^7.2.1",
     "react-contenteditable": "^3.3.6",
-    "react-dom": "^17.0.1",
+    "react-dom": "^18.1.0",
     "react-easy-panzoom": "^0.4.4",
     "react-split": "^2.0.14",
     "react-virtualized-auto-sizer": "^1.0.6"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.0",
-    "@types/react-codemirror": "^1.0.3",
-    "@types/react-dom": "^17.0.0",
-    "esbuild": "0.14.23",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.3",
-    "ts-loader": "^8.0.11",
-    "typescript": "^4.1.2"
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.33",
+    "@types/react": "^18.0.9",
+    "@types/react-codemirror": "^1.0.7",
+    "@types/react-dom": "^18.0.4",
+    "esbuild": "0.14.39",
+    "eslint": "8.15.0",
+    "eslint-config-next": "12.1.6",
+    "jest": "^28.1.0",
+    "ts-jest": "^28.0.2",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.6.4"
   }
 }
