--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   },
   "homepage": "https://github.com/c2r0b/vnmsim#readme",
   "dependencies": {
+    "@codemirror/language": "^6.2.1",
+    "@codemirror/lint": "^6.0.0",
     "@fluentui/react": "^8.97.0",
     "@fluentui/react-icons-mdl2": "^1.3.22",
+    "@uiw/codemirror-theme-github": "^4.12.3",
+    "@uiw/react-codemirror": "^4.12.3",
     "codemirror": "^5.65.3",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.4.0",
