--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.4.0",
     "next": "^12.1.6",
+    "next-pwa": "^5.6.0",
     "re-resizable": "^6.9.9",
     "react": "^18.1.0",
     "react-contenteditable": "^3.3.6",
