--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "dependencies": {
     "@codemirror/language": "^6.2.1",
     "@codemirror/lint": "^6.0.0",
-    "@fluentui/react": "^8.97.0",
-    "@fluentui/react-icons-mdl2": "^1.3.22",
+    "@fluentui/react-components": "^9.4.0",
+    "@fluentui/react-icons": "^2.0.184",
     "@uiw/codemirror-theme-github": "^4.12.3",
     "@uiw/react-codemirror": "^4.12.3",
     "mobx": "^6.5.0",
@@ -43,9 +43,9 @@
   "devDependencies": {
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.33",
-    "@types/react": "^18.0.9",
+    "@types/react": "^17.0.50",
     "@types/react-codemirror": "^1.0.7",
-    "@types/react-dom": "^18.0.4",
+    "@types/react-dom": "^17.0.17",
     "esbuild": "0.14.39",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
