--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@uiw/codemirror-theme-github": "^4.12.3",
     "@uiw/react-codemirror": "^4.12.3",
     "mobx": "^6.5.0",
+    "mobx-persist-store": "^1.1.2",
     "mobx-react-lite": "^3.4.0",
     "next": "^12.1.6",
     "next-pwa": "^5.6.0",
