transifex integration init

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@codemirror/lint": "^6.2.0",
     "@fluentui/react-components": "^9.18.6",
     "@fluentui/react-icons": "^2.0.198",
+    "@transifex/cli": "^5.2.0",
+    "@transifex/native": "^5.2.0",
+    "@transifex/react": "^5.2.0",
     "@uiw/codemirror-theme-github": "^4.19.11",
     "@uiw/react-codemirror": "^4.19.11",
     "mobx": "^6.9.0",
