--- a/transifex.yml
+++ b/transifex.yml
@@ -1,8 +1,7 @@
 git:
 filters:
-- filter_type: dir
+- filter_type: file
   file_format: KEYVALUEJSON
-  source_file_extension: json
   source_language: en
   source_file: locale/en.json
   translation_files_expression: 'Translations/<lang>'
