--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.7",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-easy-panzoom": "^0.4.4",
     "react-split": "^2.0.14",
