--- a/package.json
+++ b/package.json
@@ -28,13 +28,12 @@
     "@codemirror/lint": "^6.4.2",
     "@fluentui/react-components": "^9.37.0",
     "@fluentui/react-icons": "^2.0.218",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@tauri-apps/api": "^1.5.1",
     "@transifex/native": "^5.4.0",
     "@transifex/react": "^5.4.0",
     "@uiw/codemirror-theme-github": "^4.21.18",
     "@uiw/react-codemirror": "^4.21.18",
-    "mobx": "^6.10.2",
-    "mobx-persist-store": "^1.1.3",
-    "mobx-react-lite": "^3.4.3",
     "next": "^14.0.0",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
@@ -42,11 +41,13 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-easy-panzoom": "^0.4.4",
+    "react-redux": "^8.1.3",
     "react-split": "^2.0.14",
-    "react-virtualized-auto-sizer": "^1.0.20"
+    "react-virtualized-auto-sizer": "^1.0.20",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.4.0",
+    "@tauri-apps/cli": "^1.5.6",
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.22",
