--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vnmsim",
-  "version": "2.2.1",
+  "version": "2.3.0",
   "description": "A simulator of the Von Neumann machine",
   "main": "index.js",
   "scripts": {
@@ -30,8 +30,8 @@
     "@fluentui/react-icons": "^2.0.218",
     "@reduxjs/toolkit": "^1.9.7",
     "@tauri-apps/api": "^1.5.1",
-    "@transifex/native": "^5.4.0",
-    "@transifex/react": "^5.4.0",
+    "@transifex/native": "^6.0.1",
+    "@transifex/react": "^6.0.1",
     "@uiw/codemirror-theme-github": "^4.21.18",
     "@uiw/react-codemirror": "^4.21.18",
     "next": "^14.0.0",
@@ -41,6 +41,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-easy-panzoom": "^0.4.4",
+    "react-emoji-render": "^2.0.1",
     "react-redux": "^8.1.3",
     "react-split": "^2.0.14",
     "react-virtualized-auto-sizer": "^1.0.20",
