--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@transifex/react": "^6.0.1",
     "@uiw/codemirror-theme-github": "^4.21.20",
     "@uiw/react-codemirror": "^4.21.20",
-    "next": "^14.0.0",
+    "next": "^14.0.1",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.7",
@@ -48,7 +48,7 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.5.6",
+    "@tauri-apps/cli": "^2.0.0-alpha.17",
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.22",
