--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simulator of the Von Neumann machine",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "cd ./src-wasm && wasm-pack build --target web && cd ../ && next dev",
     "build": "next build",
     "export": "next export",
     "start": "next start",
@@ -60,9 +60,7 @@
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^28.0.8",
-    "ts-loader": "^9.4.4",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^5.2.2"
   },
   "jest": {
     "preset": "ts-jest",
