--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "cd ./src-wasm && wasm-pack build --target web && cd ../ && next dev",
-    "build": "next build",
+    "build": "./build.sh && next build",
+    "build:wasm": "cd ./src-wasm && wasm-pack build --target web && cd ../",
     "export": "next export",
     "start": "next start",
     "lint": "next lint",
