--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2.0.0-alpha.17",
+    "@tauri-apps/cli": "^1.5.6",
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.22",
