--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-redux": "^8.1.3",
     "react-split": "^2.0.14",
     "react-virtualized-auto-sizer": "^1.0.20",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-bigint": "^1.0.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.6",
