--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:next": "next dev",
     "build": "./build.sh",
     "build:next": "next build",
-    "build:wasm": "cd ./src-wasm && wasm-pack build --target web && cd ../",
+    "build:wasm": "cd ./src-tauri/shared && wasm-pack build --target web --features 'wasm' && cd ../../",
     "export": "next export",
     "start": "next start",
     "lint": "next lint",
@@ -49,7 +49,8 @@
     "react-split": "^2.0.14",
     "react-virtualized-auto-sizer": "^1.0.20",
     "redux-persist": "^6.0.0",
-    "redux-persist-transform-bigint": "^1.0.0"
+    "redux-persist-transform-bigint": "^1.0.0",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.6",
