--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -9,16 +9,14 @@ default-run = "app"
 edition = "2021"
 rust-version = "1.59"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [build-dependencies]
 tauri-build = { version = "1.5.0", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.2", features = ["updater"] }
-src-wasm = { path = "../src-wasm" }
+tauri = { version = "1.5.3", features = ["updater"] }
+shared = { path = "./shared" }
 
 [features]
 # by default Tauri runs in production mode
