--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "build": "./build.sh",
     "build:next": "next build",
     "build:wasm": "cd ./src-tauri/shared && wasm-pack build --target web --features 'wasm' && cd ../../",
+    "build:wasm-node": "cd ./src-tauri/shared && wasm-pack build --target nodejs --out-dir pkg_node --features 'wasm' && cd ../../",
     "export": "next export",
     "start": "next start",
     "lint": "next lint",
     "tauri": "tauri",
-    "test": "jest"
+    "test": "npm run build:wasm-node && jest"
   },
   "repository": {
     "type": "git",
@@ -54,7 +55,7 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.6",
-    "@types/jest": "^27.5.2",
+    "@types/jest": "^29.5.11",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.22",
     "@types/react-codemirror": "^1.0.8",
@@ -62,9 +63,9 @@
     "esbuild": "0.14.39",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
-    "jest": "^28.1.3",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "ts-jest": "^28.0.8",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   }
 }
