--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "app"
+name = "vnms"
 version = "2.3.0"
-description = "A Tauri App"
+description = "VNMS"
 authors = ["you"]
 license = ""
 repository = ""
-default-run = "app"
+default-run = "vnms"
 edition = "2021"
 rust-version = "1.59"
 
@@ -16,7 +16,7 @@ tauri-build = { version = "1.5.0", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.5.3", features = ["updater"] }
-shared = { path = "./shared" }
+shared = { path = "./shared", features = [] }
 
 [features]
 # by default Tauri runs in production mode
