fix test wasm generation

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,5 +11,7 @@ jobs:
               uses: dtolnay/rust-toolchain@stable
             - name: Install wasm-pack
               run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+            - name: Build wasm
+              run: npm run build:wasm
             - name: Run tests
               run: npm test
