--- a/.github/workflows/tauri.yml
+++ b/.github/workflows/tauri.yml
@@ -27,8 +27,12 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
+      - name: Install wasm-pack
+        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
       - name: install frontend dependencies
         run: yarn install # change this to npm or pnpm depending on which one you use
+      - name: build wasm
+        run: yarn build:wasm
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
