fix build command on windows

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev:next": "next dev",
     "build": "./build.sh",
     "build:next": "next build",
-    "build:wasm": "cd ./src-tauri/shared && wasm-pack build --target web --features 'wasm' && cd ../../",
-    "build:wasm-node": "cd ./src-tauri/shared && wasm-pack build --target nodejs --out-dir pkg_node --features 'wasm' && cd ../../",
+    "build:wasm": "cd ./src-tauri/shared && wasm-pack build --target web --features wasm && cd ../../",
+    "build:wasm-node": "cd ./src-tauri/shared && wasm-pack build --target nodejs --out-dir pkg_node --features wasm && cd ../../",
     "start": "next start",
     "lint": "next lint",
     "tauri": "tauri",
