--- a/.github/workflows/tauri-test.yml
+++ b/.github/workflows/tauri-test.yml
@@ -41,5 +41,5 @@ jobs:
           tagName: vnmsim-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version
           releaseName: 'VNMSim v__VERSION__'
           releaseBody: 'See the assets to download this version and install.'
-          releaseDraft: false
+          releaseDraft: true
           prerelease: false
