--- a/.github/workflows/tauri.yml
+++ b/.github/workflows/tauri.yml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - release
-      - dev
 
 jobs:
   publish-tauri:
@@ -49,4 +48,4 @@ jobs:
           releaseName: 'VNMSim v__VERSION__'
           releaseBody: 'See the assets to download this version and install.'
           releaseDraft: true
-          prerelease: ${{ github.ref == 'refs/heads/dev' }} # if the branch is dev, it will be a prerelease
+          prerelease: false
