--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
     "rust-analyzer.linkedProjects": [
         "./src-tauri/Cargo.toml",
         "./src-tauri/shared/Cargo.toml",
-    ]
+    ],
+    "lldb.library": "/Applications/Xcode.app/Contents/SharedFrameworks/LLDB.framework/Versions/A/LLDB",
+    "lldb.launch.expressions": "native"
 }
