--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -9,14 +9,20 @@ default-run = "vnms"
 edition = "2021"
 rust-version = "1.59"
 
+[lib]
+name = "app_lib"
+crate-type = ["staticlib", "cdylib", "rlib"]
+
 [build-dependencies]
-tauri-build = { version = "1.5.0", features = [] }
+tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.3", features = [ "fs-read-file", "dialog-open", "fs-write-file", "dialog-save", "updater"] }
+tauri = { version = "2.0.0-beta", features = [] }
 shared = { path = "./shared", features = [] }
+tauri-plugin-dialog = "2.0.0-beta.0"
+tauri-plugin-fs = "2.0.0-beta.0"
 
 [features]
 # by default Tauri runs in production mode
