--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,15 +14,18 @@ name = "app_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta", features = [] }
+tauri-build = { version = "2.0.0-beta.10", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0.0-beta", features = [] }
+tauri = { version = "2.0.0-beta.13", features = ["macos-private-api"] }
 shared = { path = "./shared", features = [] }
-tauri-plugin-dialog = "2.0.0-beta.0"
-tauri-plugin-fs = "2.0.0-beta.0"
+tauri-plugin-dialog = "2.0.0-beta.3"
+tauri-plugin-fs = "2.0.0-beta.3"
+
+[target."cfg(target_os = \"macos\")".dependencies]
+cocoa = "0.25"
 
 [features]
 # by default Tauri runs in production mode
