--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "@transifex/react": "^6.0.2",
     "@uiw/codemirror-theme-github": "^4.21.21",
     "@uiw/react-codemirror": "^4.21.21",
-    "fluentui-next-appdir-directive": "^0.1.5",
-    "next": "^14.1.0",
-    "next-pwa": "^5.6.0",
+    "fluentui-next-appdir-directive": "0.1.5",
+    "next": "14.1.0",
+    "next-pwa": "5.6.0",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.7",
     "react-cookie": "^4.1.1",
