--- a/.github/workflows/tauri.yml
+++ b/.github/workflows/tauri.yml
@@ -30,9 +30,9 @@ jobs:
       - name: Install wasm-pack
         run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
       - name: install frontend dependencies
-        run: yarn install # change this to npm or pnpm depending on which one you use
+        run: pnpm install
       - name: build wasm
-        run: yarn build:wasm
+        run: pnpm build:wasm
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
