--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,12 +6,12 @@ jobs:
         steps:
             - uses: actions/checkout@v2
             - name: Install dependencies
-              run: npm install
+              run: pnpm install
             - name: install Rust stable
               uses: dtolnay/rust-toolchain@stable
             - name: Install wasm-pack
               run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
             - name: Build wasm
-              run: npm run build:wasm
+              run: pnpm run build:wasm
             - name: Run tests
-              run: npm test
+              run: pnpm test
