--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "dependencies": {
     "@codemirror/language": "^6.10.1",
     "@codemirror/lint": "^6.5.0",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/view": "^6.38.1",
     "@fluentui/react-components": "^9.46.3",
     "@fluentui/react-icons": "^2.0.226",
     "@reduxjs/toolkit": "^1.9.7",
