--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
+            - uses: pnpm/action-setup@v4
+              with:
+                version: 10
             - name: Install dependencies
               run: pnpm install
             - name: install Rust stable
