--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,15 +14,15 @@ name = "app_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta.11", features = [] }
+tauri-build = { version = "2.5", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0.0-beta.14", features = ["macos-private-api"] }
+tauri = { version = "2.5", features = ["macos-private-api"] }
 shared = { path = "./shared", features = [] }
-tauri-plugin-dialog = "2.0.0-beta.4"
-tauri-plugin-fs = "2.0.0-beta.4"
+tauri-plugin-dialog = "2.4"
+tauri-plugin-fs = "2.4"
 
 [target."cfg(target_os = \"macos\")".dependencies]
 cocoa = "0.25"
